# rust_web

./: .gitignore  Cargo.toml  README.md
frontend/: .gitignore  Cargo.toml  index.html  server.py
frontend/css/: style.css
frontend/src/: ice.rs  main.rs  sdp.rs  websockets.rs
server/: .gitignore  Cargo.toml
server/src/: main.rs
signalling_protocol/: Cargo.toml
signalling_protocol/src/: lib.rs
