[package]
name = "frontend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git="https://github.com/yewstack/yew" }
wasm-bindgen = "0.2.75"
wasm-bindgen-futures = "0.4.25"
js-sys = "0.3.52"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.67"
serde-json-wasm = "0.3.1"
signalling_protocol = { path = "../signalling_protocol" }

[dependencies.web-sys]
version = "0.3.52"
features = [
  "MessageEvent",
  "RtcPeerConnection",
  "RtcSignalingState",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcIceConnectionState",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcSessionDescription",
  "RtcIceGatheringState",
  "Navigator",
  "MediaDevices",
  "Window", 
  "Document",
  "MediaStream",
  "Element",
  "MediaStreamConstraints",
  "HtmlVideoElement",
  "HtmlMediaElement", 
  "WebSocket",
  "HtmlButtonElement",
  "HtmlParagraphElement",
  "HtmlLabelElement",
  "EventListener",
  "MouseEvent",
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "ProgressEvent",
  "HtmlButtonElement",
  "HtmlInputElement",
]
