[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.11.0", features = ["full"] }
tokio-stream = "0.1.7"
warp = { version = "0.3.1", features = ["tls"] }
futures = { version = "0.3.17", default-features = false }
signalling_protocol = { path = "../signalling_protocol" }
serde = "1.0.130"
serde_json = "1.0.67"
uuid = { version = "0.8.2", features = ["v4"] }
